# meta_ai-cv-screening-and-ranking

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md
.cursor/rules/: backend.mdc  conventions.mdc  frontend.mdc
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: candidates.py  jobs.py
backend/app/services/: claude.py  contact.py  email.py  export.py  parsing.py  scoring.py  storage.py
backend/tests/: test_claude_prompt.py  test_scoring.py
docs/: ai.md  api.md  architecture.md  branding.md  setup.md  usage.md
frontend/: eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AppShell.jsx  BatchProgress.jsx  CandidateDrawer.jsx  CompareView.jsx  CreateJobDialog.jsx  Markdown.jsx  ScheduleInterviewDialog.jsx  ScoreBar.jsx  StatusBadge.jsx  UploadZone.jsx  WeightsEditor.jsx
frontend/src/components/icons/: index.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Dialog.jsx  Input.jsx
frontend/src/hooks/: useInfiniteScroll.js
frontend/src/lib/: api.js  queries.js  utils.js  weights.js  weights.test.js
frontend/src/pages/: CandidatePage.jsx  JobDetailPage.jsx  JobsPage.jsx
frontend/src/styles/: main.css  tokens.css
samples/: create_sample_cvs.py
samples/jobs/: ai_ml_engineer.md  senior_fullstack_engineer.md
