[project]
name = "metahire-backend"
version = "0.1.0"
description = "MetaHire — AI CV Screening & Ranking API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "anthropic>=0.50.0",
    "asyncpg>=0.30.0",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.2.0",
    "httpx>=0.28.0",
    "certifi>=2026.5.20",
    "truststore>=0.10.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in default args is fine

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
include = ["app"]
exclude = ["data/", ".venv/", "**/__pycache__/"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
